--- a/style.css
+++ b/style.css
@@ -6,9 +6,19 @@
     font-size: 16px;
 }
 
-body{
-    background-color: rgb(62, 95, 140)
+body {
+    width: 100%;
+    height: 100vh;
+    background-image: url(https://cdn.myportfolio.com/5f720a17-c1dd-4390-9ba5-fe4a2ecd4a1d/6f76fae1-f9b2-4203-a8c9-27080bb079e1_rw_1920.jpg?h=1850c46a7d89115649666ec8980e29cb);
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
+
+
+
+ 
+    
 
 .navigation {
 background-color: black;
